Allowing users to provide additional http headers for Prometheus Client.